<resources>
    <string name="app_name">appHomeManagerV14</string>
    <!--<string name="networkName">HomeManager</string>     voltar para esta rede         -->
    <string name="networkName">NetWifi2</string>

    <!-- NetworkConfiguration -->
    <string name="conexao">Conexão</string>

    <!--login-->
    <string name="userNOK">Usuário não encontrado</string>

    <!--mensagens-->
    <string name="msg1">Favor conectar na rede</string>
    <string name="msg2">para configurar o dispositivo</string>
    <string name="msg3">Dados enviados</string>

    <string name="titleLiving">Sala</string>
    <string name="titleKitchen">Cozinha</string>
    <string name="titleBedRoom1">Quarto - 1</string>
    <string name="titleBedRoom2">Quarto - 2</string>
    <string name="titleBedRoom3">Quarto - 3</string>
    <string name="titleBedRoom4">Quarto - 4</string>
    <string name="titleBathRoom1">Banheiro - 1</string>
    <string name="titleBathRoom2">Banheiro - 2</string>
    <string name="titleHall">Hall</string>
    <string name="titleConfiguration">Configuração</string>
    <string name="titleDoorLock">Door Lock</string>
    <string name="titleConfigCard">Cadastrar Cartão</string>
    <string name="wifi">Wifi</string>
    <string name="rfid">RFID</string>

    <!-- lampadas / tomadas Sala-->
    <string name="l1LVR">Rua</string>
    <string name="l2LVR">Escada</string>
    <string name="l3LVR">Entrada</string>
    <string name="l4LVR">Spot</string>
    <string name="l5LVR">Sala</string>
    <string name="l6LVR">Bar</string>

    <string name="t1LVR">Tv</string>
    <string name="t2LVR">Sky</string>
    <string name="t3LVR">Som</string>
    <string name="t4LVR">Geral</string>

    <!-- lampadas / tomadas Cozinha-->
    <string name="l1KTR">Principal</string>
    <string name="l2KTR">Pia</string>
    <string name="l3KTR">Lavanderia</string>

    <string name="t1KTR">Fogão</string>
    <string name="t2KTR">Microondas</string>
    <string name="t3KTR">Geladeira</string>
    <string name="t4KTR">Máquina</string>
    <string name="t5KTR">Cafeteira</string>
    <string name="t6KTR">Liquidificador</string>
    <string name="t7KTR">Geral</string>
    <string name="t8KTR">Geral</string>
    <string name="t9KTR">Geral</string>

    <!-- lampadas / tomadas Quarto1-->
    <string name="l1BDR1">Principal</string>

    <string name="t1BDR1">TV</string>
    <string name="t2BDR1">Computador</string>
    <string name="t3BDR1">Abajur</string>
    <string name="t4BDR1">Geral</string>
    <string name="t5BDR1">Geral</string>
    <string name="t6BDR1">Geral</string>
    <string name="t7BDR1">Geral</string>

    <!-- lampadas / tomadas Quarto2-->
    <string name="l1BDR2">Principal</string>

    <string name="t1BDR2">TV</string>
    <string name="t2BDR2">Computador</string>
    <string name="t3BDR2">Abajur</string>
    <string name="t4BDR2">Geral</string>
    <string name="t5BDR2">Geral</string>
    <string name="t6BDR2">Geral</string>
    <string name="t7BDR2">Geral</string>

    <!-- lampadas / tomadas Quarto3-->
    <string name="l1BDR3">Principal</string>

    <string name="t1BDR3">TV</string>
    <string name="t2BDR3">Computador</string>
    <string name="t3BDR3">Abajur</string>
    <string name="t4BDR3">Geral</string>
    <string name="t5BDR3">Geral</string>
    <string name="t6BDR3">Geral</string>
    <string name="t7BDR3">Geral</string>

    <!-- lampadas / tomadas Quarto4-->
    <string name="l1BDR4">Principal</string>
    <string name="l2BDR4">Banheiro</string>
    <string name="l3BDR4">Chuveiro</string>

    <string name="t1BDR4">TV</string>
    <string name="t2BDR4">Computador</string>
    <string name="t3BDR4">Abajur</string>
    <string name="t4BDR4">Geral</string>
    <string name="t5BDR4">Banheiro</string>

    <!-- lampadas / tomadas Hall-->
    <string name="l1HALL">Corredor</string>
    <string name="l2HALL">Área</string>

    <string name="t1HALL">Corredor</string>
    <string name="t2HALL">Impressora</string>
    <string name="t3HALL">Roteador</string>
    <string name="t4HALL">Geral</string>
    <string name="t5HALL">Geral</string>
    <string name="t6HALL">Geral</string>

    <!-- lampadas / tomadas Banheiro1-->
    <string name="l1BTR1">Principal</string>
    <string name="l2BTR1">Chuveiro</string>

    <string name="t1BTR1">Geral</string>

    <!-- lampadas / tomadas Banheiro2-->
    <string name="l1BTR2">Principal</string>
    <string name="l2BTR2">Chuveiro</string>

    <string name="t1BTR2">Geral</string>

    <!-- status -->
    <string name="status">Status</string>
    <string name="onLine">On-Line</string>
    <string name="offLine">Off-Line</string>


    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="enviar">Enviar</string>
    <string name="voltar">Voltar</string>
    <string name="sair">Sair</string>
    <string name="cadastro">Cadastra-se</string>
    <string name="btnetwork">Configuração</string>

    <string name="dgLogin">Digite o seu e-mail</string>
    <string name="dgPassword">Digite sua senha</string>
    <string name="dgConfirmePassword">Confirmar senha</string>

    <string name="fvssid">Favor inserir o SSID</string>
    <string name="fvEmail">Favor inserir seu e-mail</string>
    <string name="fvSenha">Favor inserir sua senha</string>
    <string name="fvpassnetword">Favor inserir a senha da rede</string>
    <string name="fvcSenha">Favor inserir sua senha novamente</string>

    <string name="entrada">Entrada</string>
    <string name="sala">Sala</string>
    <string name="quarto">Quarto</string>
    <string name="banheiro">Banheiro</string>
    <string name="cozinha">Cozinha</string>
    <string name="quintal">Quintal</string>

    <string name="senhaError">Senhas diferentes</string>
    <string name="registroError">Erro ao cadastrar usuário</string>
    <string name="ssidErrorLength">SSID contém mais de 35 caracteres</string>
    <string name="passwordErrorLength">A senha contém mais de 35 caracteres</string>
    <string name="networkError">Erro ao configurar a rede</string>

    <string name="registroOk">Registro realizado com sucesso</string>
    <string name="networkOk">Rede configurada com sucesso</string>

    <string name="light">Lâmpadas</string>
    <string name="power">Tomadas</string>

    <string name="ssid">SSID:</string>
    <string name="unidentified">unidentified</string>

    <!-- water tank -->
    <string name="endereco">Endereço</string>
    <string name="nivel">Nível</string>
    <string name="caixa">Caixa</string>
    <string name="cisterna">Cisterna</string>
    <string name="sup">Superior</string>
    <string name="inf">Inferior</string>
    <string name="off">D</string>
    <string name="on">L</string>
    <string name="auto">Auto</string>
    <string name="atual">Atual</string>
    <string name="ligada">Ligada</string>
    <string name="desligada">Desligada</string>

    <!-- dash board -->
    <string name="reservatorio">Reservatório</string>
    <string name="utilitarios">Utilitários</string>
    <string name="controle">Controle</string>
    <string name="cidade">Cidade</string>
    <string name="strNull">null</string>
</resources>
