<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNetwork"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apphomemanager.CadastroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imagem2"
        android:scrollbars="horizontal|vertical"
        android:verticalScrollbarPosition="defaultPosition"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutSup"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:text="@string/enviar" />

        <LinearLayout
            android:id="@+id/layoutSup"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40pt"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eTSSID"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fvssid"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/eTPassword"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginEnd="71dp"
                android:layout_marginRight="71dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fvpassnetword"
                android:inputType="textPassword" />

            <ProgressBar
                android:id="@+id/pBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="74dp"
                android:layout_height="70dp"
                android:layout_marginTop="1dp"
                android:indeterminate="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSSID"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:text="@string/ssid"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>