<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apphomemanager.CadastroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imagem2"
        android:scrollbars="horizontal|vertical"
        android:verticalScrollbarPosition="defaultPosition"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btEnviarDoor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutSupDoor"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/cadastrar" />

        <LinearLayout
            android:id="@+id/layoutSupDoor"
            android:layout_width="match_parent"
            android:layout_height="379dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40pt"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eTSSID"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/dgLogin"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/eTPassword"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginEnd="71dp"
                android:layout_marginRight="71dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/dgPassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/eTPasswordConfirm"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginEnd="71dp"
                android:layout_marginRight="71dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/dgConfirmePassword"
                android:inputType="textPassword" />

            <ProgressBar
                android:id="@+id/pBarDoor"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp" />

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>