<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:scrollbars="horizontal|vertical"
    android:verticalScrollbarPosition="defaultPosition"
    app:layout_anchorGravity="center|center_horizontal|center_vertical"
    android:focusable="true" android:focusableInTouchMode="true"
    tools:context="com.example.apphomemanager.MainActivity">

    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->

    <LinearLayout
        android:id="@+id/layoutSupDoor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/eTSSID"
            android:layout_width="275dp"
            android:layout_height="57dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/dgLogin"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/eTPassword"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/dgPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btEnviarDoor"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:text="@string/login" />

        <ProgressBar
            android:id="@+id/pBarDoor"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>